[package]
name = "lab-advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colour = "0.6.0"
itertools = "0.10.5"

[[bin]]
name = "2021-day01"
path = "src/advent2021/day01/mod.rs"

[[bin]]
name = "2021-day02"
path = "src/advent2021/day02/mod.rs"

[[bin]]
name = "2021-day03"
path = "src/advent2021/day03/mod.rs"
