[package]
name = "lab-advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colour = "0.6.0"
itertools = "0.10.5"
regex = "1.7.0"

#[[bin]]
#name = "2021-day01"
#path = "src/advent2021/day01/mod.rs"
#
#[[bin]]
#name = "2021-day02"
#path = "src/advent2021/day02/mod.rs"
#
#[[bin]]
#name = "2021-day03"
#path = "src/advent2021/day03/mod.rs"
#
#[[bin]]
#name = "2022-day01"
#path = "src/advent2022/day01/mod.rs"

[[bin]]
name = "2022-day02"
path = "src/advent2022/day02/mod.rs"

[[bin]]
name = "2022-day03"
path = "src/advent2022/day03/mod.rs"

[[bin]]
name = "2022-day04"
path = "src/advent2022/day04/mod.rs"

[[bin]]
name = "2022-day05"
path = "src/advent2022/day05/mod.rs"

[[bin]]
name = "2022-day06"
path = "src/advent2022/day06/mod.rs"
